// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент Button Вызов колбека при клике на кнопку 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  onClick={[MockFunction]}
  type="button"
>
  <p
    className="text undefined"
  >
    Текст
  </p>
</button>
`;

exports[`Компонент Button Отрисовка заблокированной кнопки 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Компонент Button Отрисовка кнопки без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Компонент Button Отрисовка кнопки с лоадером 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Компонент Button Отрисовка кнопки с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Текст
  </p>
</button>
`;
